--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ITMD-361 Internet Technologies and Web Design</title>
+  <title>ITMD-361 Internet Technologies and Web Design - Lab 1</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentences about yourself. Add a heading. Post it to your basecamp</p>
+	<div style="width:60%;">
+		<h1>Hello, world!</h1>
+		<h1>My name is Krystian Szczech.</h1>
+		<p>I am a second year cybersecurity major.</p>
+		<p>I have been writing code since middle school.</p>
+		<p>I work at a school IT department and have done work involving web development and hosting.</p>
+		<p>I got into IT from hosting Minecraft servers.</p>
+		<p>In my free time, I like to knit, play Binding of Isaac and Minecraft, and I like to listen to music. Metal is my favorite genre, but I like just about anything.</p>
+	</div>
 </body>
 </html>
