--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>ITMD-361 Internet Technologies and Web Design - Lab 1</title>
 </head>
 <body>
-	<div style="width:60%;">
+	<div style="width:60%; margin:auto;">
 		<h1>Hello, world!</h1>
 		<h1>My name is Krystian Szczech.</h1>
 		<p>I am a second year cybersecurity major.</p>
